# openvpn-gui-linux

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
packaging/: README.md  openvpn-gui-linux.desktop
packaging/appimage/: AppRun  build.sh
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  rules
packaging/flatpak/: io.github.denysfizer.OpenvpnGuiLinux.yml
packaging/rpm/: openvpn-gui-linux.spec
scripts/: package.sh  release.sh
src/: app.rs  error.rs  main.rs  settings.rs
src/config/: mod.rs  parser.rs
src/openvpn/: management.rs  manager.rs  mod.rs  types.rs
src/ui/: connect_view.rs  log_view.rs  mod.rs  profiles_view.rs  status_bar.rs  tab_bar.rs  theme.rs
tests/fixtures/: auth_user_pass.ovpn  basic_client.ovpn  inline_certs.ovpn  static_challenge.ovpn
