[package]
name = "openvpn-gui-linux"
version = "0.1.1"
edition = "2024"
description = "A simple Linux GUI for OpenVPN"
license = "MIT"
homepage = "https://github.com/DenysFizer/openvpn-gui-linux"
repository = "https://github.com/DenysFizer/openvpn-gui-linux"

[package.metadata.deb]
maintainer = "Denys Fizer <fizerdenys@gmail.com>"
section = "net"
priority = "optional"
revision = ""
depends = "$auto, openvpn"
assets = [
    ["target/release/openvpn-gui-linux", "usr/bin/", "755"],
    ["packaging/openvpn-gui-linux.desktop", "usr/share/applications/", "644"],
    ["assets/logo.png", "usr/share/icons/hicolor/256x256/apps/openvpn-gui-linux.png", "644"],
]

[package.metadata.generate-rpm]
license = "MIT"
requires = { openvpn = "*" }
assets = [
    { source = "target/release/openvpn-gui-linux", dest = "/usr/bin/openvpn-gui-linux", mode = "755" },
    { source = "packaging/openvpn-gui-linux.desktop", dest = "/usr/share/applications/openvpn-gui-linux.desktop", mode = "644" },
    { source = "assets/logo.png", dest = "/usr/share/icons/hicolor/256x256/apps/openvpn-gui-linux.png", mode = "644" },
]

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced", "image"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.17"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tempfile = "3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
dirs = "6"
